gohome button, banner

--- a/public/locales/en/titlesandsubtitles.json
+++ b/public/locales/en/titlesandsubtitles.json
@@ -10,5 +10,6 @@
   "allourvideos": "CLICK HERE TO CHECK ALL OUR MUSIC VIDEOS",
   "enpublicity": "PUBLICITY",
   "enproduct": "PRODUCT VIDEO",
-  "enservice": "SERVICE VIDEO"
+  "enservice": "SERVICE VIDEO",
+  "whatyoulookinat": "Hello! What are you looking for?"
 }
