--- a/public/locales/es/titlesandsubtitles.json
+++ b/public/locales/es/titlesandsubtitles.json
@@ -10,5 +10,6 @@
   "allourvideos": "CLICK AQUÍ PARA MIRAR TODOS NUESTROS VIDEOS MUSICALES",
   "espublicity": "PUBLICIDAD",
   "esproduct": "VIDEO PRODUCTO",
-  "esservice": "VIDEO SERVICIO"
+  "esservice": "VIDEO SERVICIO",
+  "whatyoulookinat": "Hola! ¿Qué estás buscando?"
 }
