--- a/public/locales/pt/titlesandsubtitles.json
+++ b/public/locales/pt/titlesandsubtitles.json
@@ -7,5 +7,6 @@
   "ourservices": "Nossos Serviços",
   "digitalcontentsubtitle": "Criação de Conteúdo Digital Inspirado, Habilidoso e Acessível: Seu Parceiro Criativo",
   "youtubeplaylist": "Logo abaixo, você encontrará uma playlist do YouTube cuidadosamente selecionada, onde poderá mergulhar em uma seleção de nossos vídeos musicais, alguns deles aprimorados com inteligência artificial:",
-  "allourvideos": "CLIQUE AQUI PARA VERIFICAR TODOS OS NOSSOS VÍDEOS DE MÚSICA"
+  "allourvideos": "CLIQUE AQUI PARA VERIFICAR TODOS OS NOSSOS VÍDEOS DE MÚSICA",
+  "whatyoulookinat": "Olá! O que estás a procurar?"
 }
