--- a/public/locales/en/titlesandsubtitles.json
+++ b/public/locales/en/titlesandsubtitles.json
@@ -1,7 +1,7 @@
 {
   "itsubtitle": "Passionate, Competent, and Affordable IT Solutions: Your Technology Partner",
-  "digitalcontenttitle": "DIGITAL CONTENT",
-  "ittitle": "IT SOLUTIONS",
+  "digitalcontenttitle": "AUDIOVISUAL",
+  "ittitle": "WEBS & APPS",
   "welcometoskyder": "Welcome to Skyder, your ultimate partner for digital success!",
   "wearepassionate": "We are passionate about translating innovative ideas into incredible digital experiences. We combine the creativity of an experienced audiovisual producer with the expertise of a talented programmer to provide exceptional technological solutions for your business.",
   "ourservices": "Our Services",
