--- a/public/locales/es/titlesandsubtitles.json
+++ b/public/locales/es/titlesandsubtitles.json
@@ -1,7 +1,7 @@
 {
   "itsubtitle": "Soluciones de TI Apasionadas, Competentes y Accesibles: Tu Socio Tecnológico",
-  "ittitle": "SOLUCIONES DE TI",
-  "digitalcontenttitle": "CONTENIDO DIGITAL",
+  "ittitle": "WEBS & APPS",
+  "digitalcontenttitle": "AUDIOVISUAL",
   "welcometoskyder": "Bienvenido a Skyder, su socio definitivo para el éxito digital!",
   "wearepassionate": "Somos apasionados por traducir ideas innovadoras en experiencias digitales increíbles. Combinamos la creatividad de un experimentado productor audiovisual con la experiencia de un talentoso programador para ofrecer soluciones tecnológicas excepcionales para su negocio.",
   "ourservices": "Nuestros servicios",
