--- a/public/locales/pt/titlesandsubtitles.json
+++ b/public/locales/pt/titlesandsubtitles.json
@@ -1,7 +1,7 @@
 {
   "itsubtitle": "Soluções de TI Apaixonadas, Competentes e Acessíveis: Seu Parceiro Tecnológico",
-  "ittitle": "SOLUÇÕES DE TI",
-  "digitalcontenttitle": "CONTEÚDO DIGITAL",
+  "ittitle": "WEB & APPS",
+  "digitalcontenttitle": "AUDIOVISUAL",
   "welcometoskyder": "Bem-vindo à Skyder, o seu parceiro definitivo para o sucesso digital!",
   "wearepassionate": "Somos apaixonados por traduzir ideias inovadoras em experiências digitais incríveis. Combinamos a criatividade de um produtor audiovisual experiente com a perícia de um programador talentoso para fornecer soluções tecnológicas excepcionais para o seu negócio.",
   "ourservices": "Nossos Serviços",
