translate missing fix

--- a/public/locales/en/titlesandsubtitles.json
+++ b/public/locales/en/titlesandsubtitles.json
@@ -15,5 +15,7 @@
   "enLANDINGS": "LANDINGS",
   "enFORMS": "FORMS",
   "enMOBILEAPPS": "MOBILE APPS",
-  "enWEBAPPS": "WEB APPS"
+  "enWEBAPPS": "WEB APPS",
+  "newAIpoweredvideoediting": "New AI powered video editing",
+  "AI": "AI"
 }
