--- a/public/locales/es/titlesandsubtitles.json
+++ b/public/locales/es/titlesandsubtitles.json
@@ -15,5 +15,7 @@
   "esLANDINGS": "LANDINGS",
   "esFORMS": "FORMS",
   "esMOBILEAPPS": "MOBILE APPS",
-  "esWEBAPPS": "WEB APPS"
+  "esWEBAPPS": "WEB APPS",
+  "newAIpoweredvideoediting": "Edición de video potenciada por IA",
+  "AI": "IA"
 }
