--- a/public/locales/pt/titlesandsubtitles.json
+++ b/public/locales/pt/titlesandsubtitles.json
@@ -12,5 +12,7 @@
   "ptLANDINGS": "LANDINGS",
   "ptFORMS": "FORMS",
   "ptMOBILEAPPS": "MOBILE APPS",
-  "ptWEBAPPS": "WEB APPS"
+  "ptWEBAPPS": "WEB APPS",
+  "newAIpoweredvideoediting": "Edição de Vídeo com IA",
+  "AI": "IA"
 }
