added design feature

--- a/public/locales/en/servicescards.json
+++ b/public/locales/en/servicescards.json
@@ -5,6 +5,9 @@
   "descit1": "Your online presence is the first impression customers have of your company. We design stunning and functional websites that captivate and convert.",
   "descit2": "We live in a mobile world. We develop custom mobile applications that literally put your business in the hands of customers.",
   "descit3": "Whatever the challenge, we have the expertise to create tailor-made solutions for your technological needs.",
+  "descit4": "Unlock the power of exceptional web and mobile design for a captivating online presence.",
+  "titleit4": "Design",
+  "priceit3": "Starting from €100",
   "priceit1": "Starting from €300",
   "priceit2": "Starting from €500",
   "titledg1": "Audiovisual Content",
