--- a/public/locales/es/servicescards.json
+++ b/public/locales/es/servicescards.json
@@ -7,6 +7,11 @@
   "descit3": "Sea cual sea el desafío, tenemos la experiencia para crear soluciones a medida para tus necesidades tecnológicas.",
   "priceit1": "A partir de €300",
   "priceit2": "A partir de €500",
+
+  "descit4": "Descubre el poder de un diseño excepcional para web y móviles, para lograr una presencia online cautivadora.",
+  "titleit4": "Diseño",
+  "priceit3": "A partir de €100",
+
   "titledg1": "Contenido Audiovisual",
   "titledg2": "Fotografía Profesional",
   "descdg1": "Contar tu historia de manera cautivadora es esencial. Producimos videos y contenido audiovisual de alta calidad impulsados por IA que comunica eficazmente tu mensaje.",
