--- a/public/locales/pt/servicescards.json
+++ b/public/locales/pt/servicescards.json
@@ -6,6 +6,11 @@
   "descit2": "Vivemos em um mundo móvel. Desenvolvemos aplicativos móveis personalizados que colocam seu negócio literalmente nas mãos dos clientes.",
   "descit3": "Seja qual for o desafio, temos a expertise para criar soluções sob medida para suas necessidades tecnológicas.",
   "priceit1": "A partir de €300",
+
+  "descit4": "Desbloqueie o potencial de um design web e móvel excecional para uma presença online cativante",
+  "titleit4": "Design",
+  "priceit3": "A partir de €100",
+
   "priceit2": "A partir de €500",
   "titledg1": "Conteúdo Audiovisual",
   "titledg2": "Fotografia Profissional",
