remove design from page

--- a/public/locales/pt/titlesandsubtitles.json
+++ b/public/locales/pt/titlesandsubtitles.json
@@ -1,6 +1,6 @@
 {
   "itsubtitle": "Soluções de TI Apaixonadas, Competentes e Acessíveis: Seu Parceiro Tecnológico",
-  "ittitle": "WEB & APPS / DESIGN",
+  "ittitle": "WEBS & APPS",
   "digitalcontenttitle": "AUDIOVISUAL",
   "welcometoskyder": "Bem-vindo à Skyder, o seu parceiro definitivo para o sucesso digital!",
   "wearepassionate": "Somos apaixonados por traduzir ideias inovadoras em experiências digitais incríveis. Combinamos a criatividade de um produtor audiovisual experiente com a perícia de um programador talentoso para fornecer soluções tecnológicas excepcionais para o seu negócio.",
